# ancestry-autoencoder

./: .gitignore  README.md  main.py  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.app.json
backend/: VCFManager.py  VCFManager_test.py  __main__.py  main.py  test_fs.py
backend/test/: fs_test.py
frontend/: App.tsx
frontend/client/: sdk.gen.ts  types.gen.ts
frontend/components/: FileBrowser.tsx
