[project]
name = "ancestry-autoencoder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standart]>=0.115.12",
    "httpx>=0.28.1",
    "numpy>=2.2.5",
    "polars>=1.27.1",
    "pytest>=8.3.5",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
]
